# coursework_4

./: README.md  config.py  main.py  pyproject.toml
data/: vacancies.xlsx
src/: func.py  hh_abc.py  json_load.py  json_worker.py  list_vacancies.py  load_hh.py  push_excel.py  sort_vacancies.py  vacancies.json  vacancy.py  vacancy_json_abc.py  vacansy.py  valuta.json  valuta.py
tests/: all_vacancies_test.json  conftest.py  test_converter.py  test_func.py  test_hh.py  test_json_load.py  test_json_worker.py  test_list_vacancies.py  test_sort_vacancies.py  test_vacancy.py  vacancies_test.json  valuta_test.json
