[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["Алексей Денисенко <elvis.presly.039127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
