[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["Алексей Денисенко <elvis.presly.039127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.2.0"
fake-useragent = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
